declarative/processor/src/test/resources/bad/dataset default graph method is default.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;
import com.inrupt.rdf.wrapping.declarative.annotation.DefaultGraph;

@Dataset
interface X {
    @DefaultGraph
    default Object x() {
        return null;
    }
}
